--- a/index.html
+++ b/index.html
@@ -251,13 +251,13 @@
         .powered-by {
             margin-top: 50px;
             font-size: 12px;
-            color: #ccd0d4;
+            color: #a5a7a8;
         }
 
         .powered-by-support {
             margin-top: 50px;
             font-size: 12px;
-            color: #ccd0d4;
+            color: #a5a7a8;
         }
     </style>
 </head>
