--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     <a href="#" target="_blank" class="shortened-link" id="shortLink"></a>
                     <div class="original-display">Redirects to: <span id="originalText"></span></div>
                 </div>
-                <div class="powered-by">powered by short.cm (custom domain l.tinnyurl.cc)</div>
+                <div class="powered-by">powered by short.io</div>
             </div>
 
             <div id="support" class="tab-content">
