--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                 const originalUrl = normalizeUrl(input.value);
                 if (!originalUrl) return alert('Please enter a valid URL');
 
-                const shortened = 'http://adfoc.us/serve/sitelinks/?id=874336&url=' + originalUrl;
+                const shortened = 'http://al.tinnyurl.cc/serve/sitelinks/?id=874336&url=' + originalUrl;
 
                 const linkEl = document.getElementById('shortLink-support');
                 const originalText = document.getElementById('originalText-support');
